sphinx_conestack_theme/conestack/static/conestack.css
/* ... */
#cs-mobile-menu .cs-mobile-toc ul li a {
  color: var(--cs-color);
  text-decoration: none;
}
#cs-mobile-menu .cs-mobile-toc ul li.current a {
  font-weight: bold;
}

#cs-sidebar {
  grid-area: sidebar;
  background: white;
  width: fit-content;
  min-width: 180px;
  max-height: calc(100vh - 8rem);
  height: max-content;
  position: sticky;
  top: 1rem;
  overflow-y: auto;
}
@media (max-width: 768px) {
  #cs-sidebar {
    display: none;
  }
}

@media (min-width: 769px) {
  .cs-nav-toc {
    display: block !important;
    padding-left: 0.25rem;
    margin-left: -0.25rem;
    font-weight: 600;
  }
}
.cs-nav-toc a,
.cs-nav-toc a:visited,
.cs-nav-toc a:active,
.cs-nav-toc a:hover {
  text-decoration: none;
  color: var(--bs-gray-800);
}
.cs-nav-toc ul {
  list-style: none;
  margin-bottom: 0.2rem;
  padding-left: 0;
}
.cs-nav-toc ul ul {
  padding-left: 1.2rem;
}
.cs-nav-toc li.toctree-l1 {
  position: relative;
  font-weight: 600;
  margin-bottom: 0.3rem;
}
.cs-nav-toc li.toctree-l1.current > a {
  color: var(--cs-bg-color);
}
.cs-nav-toc li.toctree-l1.current ul {
  display: block;
}
.cs-nav-toc li.toctree-l1 ul {
  display: none;
}
.cs-nav-toc li.toctree-l1 li {
  font-weight: 300;
}
.cs-nav-toc li.toctree-l1 > a::before {
  display: inline-block;
  font-family: bootstrap-icons !important;
  font-style: normal;
  font-weight: normal !important;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  vertical-align: -0.125em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\f285";
  margin-right: 0.2rem;
  color: var(--bs-gray-800);
}
.cs-nav-toc li.toctree-l1 > a.current::before, .cs-nav-toc li.toctree-l1 > a.expanded::before {
  content: "\f282";
}
.cs-nav-toc li.toctree-l1 > a.collapsed::before {
  content: "\f285" !important;
}
.cs-nav-toc li.toctree-l1 > span.toggle {
  position: absolute;
  cursor: pointer;
}
.cs-nav-toc li.toctree-l1 > span.toggle::before {
  display: inline-block;
  font-family: bootstrap-icons !important;
  font-style: normal;
  font-weight: normal !important;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  vertical-align: -0.125em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\f285";
  opacity: 0;
}
.cs-nav-toc li.toctree-l2 a {
  font-size: 14px;
}
.cs-nav-toc li.toctree-l2 a, .cs-nav-toc li.toctree-l2 a:visited, .cs-nav-toc li.toctree-l2 a:active, .cs-nav-toc li.toctree-l2 a:hover {
  color: var(--bs-gray-700);
}
.cs-nav-toc li.toctree-l2 a.active, .cs-nav-toc li.toctree-l2 a.active:visited, .cs-nav-toc li.toctree-l2 a.active:active, .cs-nav-toc li.toctree-l2 a.active:hover {
  color: var(--bs-gray-700);
  font-weight: bold;
}

#cs-layout {
  min-height: calc(100vh - 19rem);
}
@media (min-width: 992px) {
  #cs-layout {
    grid-template-columns: 1fr 5fr !important;
  }
}
@media (min-width: 769px) {
  #cs-layout {
    display: grid;
    gap: 1.5rem;
    grid-template-areas: "sidebar main";
    grid-template-columns: 1fr 4fr;
  }
}
@media (max-width: 768px) {
  #cs-layout {
    padding: 1rem;
  }
}

.cs-main {
  gap: inherit;
  display: grid;
  grid-area: main;
  grid-template-areas: "content toc";
  grid-template-columns: minmax(0, 4fr) 1fr;
  height: min-content;
}
@media (max-width: 992px) {
  .cs-main {
    grid-template-columns: minmax(0, auto);
    grid-template-rows: auto 1fr;
  }
}
.cs-main .highlighted {
  background: rgba(13, 110, 253, 0.2);
}

.cs-content {
  grid-area: content;
  height: fit-content;
}
.cs-content .headerlink {
  text-decoration: none;
  padding-left: 8px;
  opacity: 0;
  color: var(--bs-blue);
}
.cs-content .highlight-rst {
  overflow: auto;
}
.cs-content .highlight pre,
.cs-content pre.literal-block {
  font-size: 14px;
  padding: 0;
  margin: 0;
  overflow: auto;
}
.cs-content h1 {
  margin-bottom: 1.5rem;
  font-weight: 400;
  font-size: 3rem;
  color: var(--bs-gray-800);
}
.cs-content h3 {
  font-size: 1.5rem;
}
.cs-content h2, .cs-content h3, .cs-content h4 {
  margin-top: 1.5rem;
  margin-bottom: 1rem;
  color: var(--bs-gray-700);
  font-weight: 500;
}
.cs-content h2:hover .headerlink, .cs-content h3:hover .headerlink, .cs-content h4:hover .headerlink {
  opacity: 1;
}

footer .previous-chapter::before {
  content: "<< ";
}
footer .next-chapter::after {
  content: ">> ";
}

@media (max-width: 992px) {
  .container.footer {
    max-width: 100%;
  }
}
.cs-main .admonition {
  margin: 1rem auto;
  padding: 0 0.5rem 0.5rem;
  background: white;
  border-radius: 0.2rem;
  border-left: 10px solid var(--bs-gray-600);
  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.05), 0 0 0.0625rem rgba(0, 0, 0, 0.1);
  font-size: 14px;
  overflow: hidden;
  page-break-inside: avoid;
}
.cs-main .admonition p.admonition-title {
  position: relative;
  margin: 0 -0.5rem 0.5rem;
  padding: 0.5rem 0.5rem 0.5rem 2rem;
  font-weight: 400;
  font-size: 16px;
  background-color: var(--bs-gray-200);
  line-height: 1.3;
}
.cs-main .admonition p.admonition-title:before {
  content: "\f43c";
  position: absolute;
  left: 0.5rem;
  font-size: 16px;
  font-family: "bootstrap-icons";
  color: var(--bs-gray-600);
}
.cs-main .admonition.attention {
  border-left-color: #ff3a00;
}
.cs-main .admonition.attention > .admonition-title {
  background: rgba(255, 58, 0, 0.2);
}
.cs-main .admonition.attention > .admonition-title:before {
  content: "\f332";
  color: #ff3a00;
}
.cs-main .admonition.danger {
  border-left-color: #ff0000;
}
.cs-main .admonition.danger > .admonition-title {
  background: rgba(255, 0, 0, 0.25);
}
.cs-main .admonition.danger > .admonition-title:before {
  content: "\f532";
  color: #ff0000;
}
.cs-main .admonition.error {
  border-left-color: #ff3a00;
}
.cs-main .admonition.error > .admonition-title {
  background: rgba(255, 58, 0, 0.2);
}
.cs-main .admonition.error > .admonition-title:before {
  content: "\f622";
  color: #ff3a00;
}
.cs-main .admonition.caution {
  border-left-color: var(--bs-orange);
}
/* ... */

